--- a/style.css
+++ b/style.css
@@ -1,84 +1,210 @@
-:root{
-    ---box-shadow:0 1px 3px  rgba(0,0,0,0.12), 0 1px 2px  rgba(0,0,0,0.24);
-}
+
 *{
     box-sizing: border-box;
-    
+    margin: 0;
+    padding: 0;
+
+}
+html{
+    font-size: 10px;
+}
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+::-webkit-scrollba-track{
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+::-webkit-scrollba-thumb{
+    background: #2e384d;
+    border-radius: 10px;
+}
+::-webkit-scrollba-thumb:hover{
+    background:#2e384d ;
+}
+.plus{
+    border: 1px solid green;
+
+}
+.plus h4{
+    color: green;
+}
+.plus span i{
+    color: green;
+
+}
+.minus{
+    border: 1px solid red;
+
+}
+.minus h4{
+    color: red;
+}
+.minus span i{
+    color: red;
+
 }
 body{
-    background-color: #f7f7f7;
+    font-family: "Poppins",sans-serif;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .container{
-    margin: 30px auto;
-    width: 350px;
+    background-color: rgb(197, 193, 193);
+    width: 75rem;
+  
+    padding: 5rem;
+    box-shadow: 0.1rem 0.1rem 0.5rem 0.1rem rgba(0, 0, 0, 0.35);
 
 }
-h1{
-    letter-spacing: 1px;
-    margin: 0;
-
-}
-h3{
-    border-bottom: 1px solid #bbb;
-    padding-bottom: 10px;
-    margin: 40px 0 10px;
-}
-h4{
-    margin: 0;
-    text-transform: uppercase;
-}
-.ins-exp-container{
-    background-color: #fff;
-    box-shadow: var(--box-shadow);
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    margin:  20px 0;
-}
-.inc-exp-container > div{
-    flex: 1;
+.expense-title{
+    font-size: 5rem;
+    font-weight:rgb(27, 27, 82);
     text-align: center;
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+    color: rgb(41, 41, 90);
 }
-.inc-exp-container > div:first-of-type{
-    border-right:  1px solid #dedede;
+.balance{
+    width: 65rem;
+    height: 20rem;
+    background-color: white;
+    display: flex;
+    flex-direction:column ;
+    justify-content: center;
+    align-items: center;
+    box-shadow:0.1rem 0.1rem 0.5rem 0.1rem rgba(0, 0, 0, 0.35) ;
 
 }
-.money-plus{
-    color: #2ecc71;
+ h1{
+    font-size: 7rem;
+    font-weight:rgb(27, 27, 82);
+    color:rgb(35, 35, 78);
 }
-.money-minus{
-    color: #c0392b;
-}
-lable{
-    display: inline-block;
-    margin: 10px 0;
-}
-input[type="text"],input[type="number"]{
-    border: 1px solid #dedede;
-    border-radius: 2px;
-    display: block;
-    font-size: 16px;
-    padding: 10px;
-    width:100%;
-}
-.btn{
-    cursor: pointer;
-    background-color: #9c88ff;
-    box-shadow: var(--box-shadow);
-    color: #fff;
-    border: 0;
-    display: block;
-    font-size: 16px;
-    margin: 10px 0 30px;
-    padding: 10px;
-    width: 100%;
+ h4{
+    font-size: 2.5rem;
+    font-weight:rgb(39, 39, 110) ;
+    color: rgb(27, 27, 82);
 
 }
+.inc-exp-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+
+}
+.income{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30rem;
+    height: 13rem;
+    background-color: white;
+    padding: 0rem 3rem 0rem 3rem;
+    border: 0.3rem solid green;
+}
+.income h2{
+    font-size: 3.5rem;
+    color: green;
+
+}
+.income h4{
+    font-size: 1.8rem;
+    color: rgb(27, 27, 82);
+    text-transform: uppercase;
+
+}
+.expense{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 30rem;
+    height: 13rem;
+    background-color: white;
+    padding:  0rem 3rem 0rem 3rem;
+    border: 0.3rem solid red;
+}
+.expense h2{
+    font-size: 3.5rem;
+    color: red;
+
+}
+.expense h4{
+    font-size: 1.8rem;
+    color: rgb(27, 27, 82);
+    text-transform: uppercase;
+
+}
+#title-history{
+    font-size: 3.5rem;
+    color:rgb(27, 27, 82); 
+    padding-bottom: 2.5rem;
+}
+.history-box{
+    height: 34rem;
+    overflow: hidden;
+
+}
+.history-box:hover{
+    overflow-y: scroll;
+    padding-right: 1.5rem;
+}
+li{
+    list-style: none;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    margin-bottom: 2.5rem;
+}
+li h4{
+    font-size: 2rem;
+}
+span{
+    font-size: 2rem;
+}
+i{
+    margin-left: 0.5rem;
+}
+.transaction .transaction-title{
+    font-size: 3.5rem;
+    color:rgb(27, 27, 82) ;
+    margin-bottom: 1rem;
+
+
+}
+.transaction-form{
+    display: flex;
+    flex-direction: column;
+
+}
+input{
+    padding: 1.5rem;
+    margin-bottom: 2rem;
+    color:rgb(27, 27, 82)  ;
+    font-size: 1.8rem;
+    font-weight: black;
+
+}
+input::placeholder{
+    color: rgb(27, 27, 82) ;
+    font-size: 1.8rem;
+    font-weight: black;
+}
+button{
+    background-color:rgb(27, 27, 82) ;
+    padding: 2rem 5rem;
+    font-size: 3rem;
+    color: white;
+    border:0px;
+}
+
+
+
